--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,7 +16,8 @@
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background: $background;
+  background: $body-color;
+  color: $text-color;
 }
 
 .main {
@@ -26,4 +27,5 @@ html {
   justify-content: center;
   font-size: 10rem;
   flex-flow: column;
+  color: $text-color;
 }
